our story added and more registry items

--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -578,6 +578,184 @@
             </div>
 
 
+            <div class="col-md-12">
+                <div class="product-list-slider">
+                    <ul class="swiper-wrapper product-list product-list-vertical">
+
+                        <!--13-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-13" data-toggle="modal" href="#">
+                                            <img alt="product image" class="product-list-primary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture13.jpg}">
+                                            <img alt="product image" class="product-list-secondary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture13.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-13" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">3D Wall Clock DIY Large Modern Design Decal (Set Of 4)</span>
+                                            <span class="product-list-price">&#8358;12000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="12000.00" data-id="13"
+                                    data-image="/Picture13.jpg" data-name="3D Wall Clock DIY Large Modern Design Decal (Set Of 4)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!-14-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-14" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture14.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture14.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-14" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Toilet Tissue Paper Holder (Set of 3)</span>
+                                            <span class="product-list-price">&#8358;6000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="6000.00" data-id="14"
+                                    data-image="/Picture14.jpg" data-name="Toilet Tissue Paper Holder (Set of 3)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--15-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-15" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture15.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture15.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-15" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Extendable Home Modern Tv Table</span>
+                                            <span class="product-list-price">&#8358;32000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="32000.00" data-id="15"
+                                    data-image="/Picture15.jpg" data-name="Extendable Home Modern Tv Table"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--16-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-16" data-toggle="modal" href="#">
+                                            <img alt="product image" class="product-list-primary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture16.jpg}">
+                                            <img alt="product image" class="product-list-secondary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture16.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-16" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Wooden Shoe Rack (Set of 2)</span>
+                                            <span class="product-list-price">&#8358;42000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="42000.00" data-id="16"
+                                    data-image="/Picture16.jpg" data-name="Wooden Shoe Rack (Set of 2)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--17-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-17" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture17.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture17.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-17" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Extra Absorbent Microfiber Bath Towel (Set of 2)</span>
+                                            <span class="product-list-price">&#8358;16000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="16000.00" data-id="17"
+                                    data-image="/Picture17.jpg" data-name="Extra Absorbent Microfiber Bath Towel (Set of 2)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--18-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-18" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture18.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture18.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-18" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Bathroom Absorbent Mat Carpet (Set of 2)</span>
+                                            <span class="product-list-price">&#8358;18900.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="18900.00" data-id="18"
+                                    data-image="/Picture18.jpg" data-name="Bathroom Absorbent Mat Carpet (Set of 2)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+
+                    </ul>
+                    <!-- Add Pagination -->
+                    <div class="product-list-pagination text-center"> </div>
+                    <div class="product-list-slider-next right-arrow-negative"> <span class="ti-arrow-right"></span> </div>
+                    <div class="product-list-slider-prev left-arrow-negative"> <span class="ti-arrow-left"></span> </div>
+                </div>
+            </div>
+
+
+
+
         </div>
     </div>
 
