--- a/src/main/resources/templates/wedding.html
+++ b/src/main/resources/templates/wedding.html
@@ -186,17 +186,15 @@
                 <h2>Our Story</h2>
                 <h3 class="gla_subtitle">
 <!--                    The Fourth of July-->
-                    ****
                 </h3>
-                
-                
-
                 <p>
-<!--                    My fiancé proposed on the Fourth of July. My mother asked us to go to the backyard to get some -->
-<!--                    chairs and he took me by the shed where we could see all of the fireworks. He kissed me, then he -->
-<!--                    took the ring box out of his pocket and asked me to be his wife. He was shaking a little. -->
-<!--                    The proposal was a little silly but perfect, just like him." — Jeska Cords-->
-                    **** COMING SOON !!! ****
+                    "My first sighting of Adaorah was in 2014, when she and her Dad came to my store to purchase a laptop.
+                    I tried reaching out to her severally but to no avail. After much searching, I found her on Facebook and sent her a message in 2014.
+                    After about 3 years, she replied as she rarely visits Facebook.
+                    From thenceforth, our communication grew, we became friends and the rest they say is history.
+                    I always knew I was going to marry Adaorah, although she kept forming "pre-occupied".
+                    I took the bold step in March 2021, and now we are getting married" - Emeodi.
+
                 </p>
 
                
