more items added

--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -577,7 +577,6 @@
                 </div>
             </div>
 
-
             <div class="col-md-12">
                 <div class="product-list-slider">
                     <ul class="swiper-wrapper product-list product-list-vertical">
@@ -753,6 +752,185 @@
                 </div>
             </div>
 
+
+
+
+
+
+            <div class="col-md-12">
+                <div class="product-list-slider">
+                    <ul class="swiper-wrapper product-list product-list-vertical">
+
+                        <!--19-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-19" data-toggle="modal" href="#">
+                                            <img alt="product image" class="product-list-primary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture19.jpg}">
+                                            <img alt="product image" class="product-list-secondary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture19.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-19" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Double Rail Towel Hanger (Set Of 2)</span>
+                                            <span class="product-list-price">&#8358;12000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="12000.00" data-id="19"
+                                    data-image="/Picture19.jpg" data-name="Double Rail Towel Hanger (Set Of 2)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--20-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-20" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture20.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture20.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-20" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Punch-free Multifunctional Corner Wall Hanging Wall Shelf (Set of 2)</span>
+                                            <span class="product-list-price">&#8358;9000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="9000.00" data-id="20"
+                                    data-image="/Picture20.jpg" data-name="Punch-free Multifunctional Corner Wall Hanging Wall Shelf (Set of 2)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--21-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-21" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture21.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture21.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-21" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Three Tier Storage Rack Shelf</span>
+                                            <span class="product-list-price">&#8358;11900.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="11900.00" data-id="21"
+                                    data-image="/Picture21.jpg" data-name="Three Tier Storage Rack Shelf"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--22-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-22" data-toggle="modal" href="#">
+                                            <img alt="product image" class="product-list-primary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture22.jpg}">
+                                            <img alt="product image" class="product-list-secondary-img"
+                                                 style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                 th:src="@{/Picture22.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-22" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Automatic Liquid Soap/sanitizer Dispenser</span>
+                                            <span class="product-list-price">&#8358;18100.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="18100.00" data-id="22"
+                                    data-image="/Picture22.jpg" data-name="Automatic Liquid Soap/sanitizer Dispenser"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--23-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-23" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture23.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture23.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-23" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Unisex Egyptian Robe (Set of 2)</span>
+                                            <span class="product-list-price">&#8358;17000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="17000.00" data-id="23"
+                                    data-image="/Picture23.jpg" data-name="Unisex Egyptian Robe (Set of 2)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+                        <!--24-->
+                        <li class="swiper-slide text-center">
+                                    <span class="product-list-left pull-left">
+                                        <a data-target="#product-24" data-toggle="modal" href="#"><img
+                                                alt="product image" class="product-list-primary-img"
+                                                style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                                th:src="@{/Picture24.jpg}">
+                                        <img alt="product image" class="product-list-secondary-img"
+                                             style="float: left; width:  300px; height: 250px; object-fit: cover;"
+                                             th:src="@{/Picture24.jpg}">
+                                        </a>
+                                    </span>
+
+                            <a data-target="#product-24" data-toggle="modal" href="#">
+                                        <span class="product-list-right pull-left">
+                                            <span class="product-list-name h4 black-color">Large 3 In 1 Toilet Floor Mat (Set of 2)</span>
+                                            <span class="product-list-price">&#8358;20000.00</span>
+                                        </span>
+                            </a>
+
+                            <button class="btn btn-default add-item" data-cost="20000.00" data-id="24"
+                                    data-image="/Picture24.jpg" data-name="Large 3 In 1 Toilet Floor Mat (Set of 2)"
+                                    type="button">
+                                add to cart
+                            </button>
+                        </li>
+
+
+                    </ul>
+                    <!-- Add Pagination -->
+                    <div class="product-list-pagination text-center"> </div>
+                    <div class="product-list-slider-next right-arrow-negative"> <span class="ti-arrow-right"></span> </div>
+                    <div class="product-list-slider-prev left-arrow-negative"> <span class="ti-arrow-left"></span> </div>
+                </div>
+            </div>
 
 
 
